# BOOP_Tasks_2S

Lab1/: Mega.eap  Mega.xml  Mega_1.1.xml  Mega_2.1.xml
Task1/Part1/: Mega.eap
Task1/Part2/: CMakeLists.txt  arrays.h  dice.cpp  dice.h  empty.cpp  empty.h  empty.tpp  lists.h  main.cpp  print.cpp  print.h  print.tpp  random.cpp  random.h  random.tpp  std.h  test.cpp  test.h  test.tpp  unittests.cpp
Task1/Part2/NewDiagrams/: Lab12New.EAP
Task1/Part2/OldDiagrams/: Lab12.EAP
Task1/Part2/arrays/: DequeArray.h  DequeArray.tpp  QueueArray.h  QueueArray.tpp  StackArray.h  StackArray.tpp
Task1/Part2/base/: Deque.h  Queue.h  Stack.h
Task1/Part2/imgui/: imgui-SFML.cpp
Task1/Part2/lists/: DequeList.h  DequeList.tpp  DoubleNode.h  DoubleNode.tpp  List.tpp  Node.h  Node.tpp  QueueList.h  QueueList.tpp  StackList.h  StackList.tpp
Task1/Part2/lists/structural/: DoubleList.h  DoubleList.tpp  List.h
Task1/Part2/std/: DequeStd.h  DequeStd.tpp  QueueStd.h  QueueStd.tpp  StackStd.h  StackStd.tpp
